gcc/testsuite/rust/rustc/ui/parser/bounds-lifetime-2.rs
type A = for<'a + 'b> fn(); // { dg-error "" "" { target *-*-* } }

fn main() {}

